force-app/main/default/objects/Ticket__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>