force-app/main/default/objects/Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Waterproofing</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Common Area</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>