force-app/main/default/objects/Ticket__c/fields/Closure_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Email_Sent_Date__c</fullName>
    <label>Closure Email Sent Date</label>
    <type>DateTime</type>
</CustomField>