force-app/main/default/objects/Ticket__c/fields/DLP_Status__c.field-meta.xml
<CustomField>
    <fullName>DLP_Status__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(Booking__r.DLP_Start_Date__c)),
    NOT(ISNULL(Booking__r.DLP_End_Date__c)),
    DATEVALUE(CreatedDate) &gt;= Booking__r.DLP_Start_Date__c,
    DATEVALUE(CreatedDate) &lt;= Booking__r.DLP_End_Date__c
  ),
  &quot;Within DLP Period&quot;,
  IF(
    OR(
      ISNULL(Booking__r.DLP_Start_Date__c),
      ISNULL(Booking__r.DLP_End_Date__c)
    ),
    &quot;DLP Dates Not Set&quot;,
    &quot;Post DLP Period&quot;  
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLP Status</label>
    <type>Text</type>
</CustomField>